# bunker

./: Cargo.toml  LICENSE  README.md  bunker.json  bunker.rc  config.yaml
.github/workflows/: ci.yml  release.yml  scoop-extras.yml  security-audit.yml
bucket/: bunker.json
scripts/: SmartScreenTest.cs  test-scoop.ps1  validate-smartscreen.ps1
src/: body.rs  error.rs  helpers.rs  lib.rs  logging.rs  main.rs  tokio_io.rs
src/config/: mod.rs
src/dns/: cache.rs  mod.rs  resolver.rs  server.rs  validation.rs  wire.rs
src/platform/: mod.rs  windows_tray.rs
src/proxy/: connect.rs  handler.rs  mod.rs  pool.rs
src/security/: ip_filter.rs  mod.rs  rate_limiter.rs
tests/: in_process_tests.rs  integration_tests.rs
winget/: Bunker.Bunker.installer.yaml  Bunker.Bunker.locale.en-US.yaml  Bunker.Bunker.yaml  wj1918.bunker.installer.yaml  wj1918.bunker.locale.en-US.yaml  wj1918.bunker.yaml
