[package]
name = "bunker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A lightweight HTTP/HTTPS and DNS proxy"
repository = "https://github.com/wj1918/bunker"
keywords = ["proxy", "http", "https", "dns", "networking"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "bunker"
path = "src/main.rs"

[lib]
name = "bunker"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
flate2 = "1"
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
